--- a/configs.json
+++ b/configs.json
@@ -1,1 +1,11 @@
-
+{
+  "proxyMode": "round",
+  "rotateProxy": false,
+  "skipInvalidProxy": true,
+  "proxyRotationInterval": 2,
+  "delayEachAccount": [1, 1],
+  "timeToRestartAllAccounts": 300,
+  "howManyAccountsRunInOneTime": 1,
+  "doTasks": true,
+  "referralCodes": ["SC315", "NZVI4"]
+}
