--- a/configs.json
+++ b/configs.json
@@ -7,5 +7,7 @@
   "timeToRestartAllAccounts": 300,
   "howManyAccountsRunInOneTime": 1,
   "doTasks": true,
+  "connectWallets": true,
+  "bindReferralCodes": true,
   "referralCodes": ["SC315", "NZVI4"]
 }
